criando html, nav e banner

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,4 +2,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Arima&family=Roboto:wght@300;500;900&display=swap');
 
 //Framework
-@import '.bootstrap.css';
+@import './bootstrap.scss';
