Adicionada página secundária e Design responsivo ao Bootstrap no SCSS  e CSS

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,9 +8,15 @@
 @import"./header.scss";
 @import"./nav-produtos.scss";
 @import"./banners-promocionais-statico.scss";
+@import"./produtos.scss";
+@import"./footer.scss";
+@import"./responsive.scss";
 
 //Framework
 @import "./bootstrap.scss";
+
+//Breadcrumb
+@import "./breadcrumb.scss";
 
 //Config
 @import"./config.scss";
