--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@ header {
       color: #fff;
       background: #ff0f9a;
       position: absolute;
-      top: -8px;
-      left: 3px;
+      top: -10px;
+      left: 5px;
       font-size: 10px;
       width: 15px;
       height: 15px;
@@ -31,7 +31,7 @@ header {
       font-weight: bold;
       color: #333333; }
       header ul li a svg {
-        font-size: 30px; }
+        font-size: 23px; }
       header ul li a:hover {
         color: initial; }
 
@@ -95,6 +95,55 @@ nav.nav-produtos {
       .banners-promocionais-statico .banners-promocionais-statico-todo-br p strong {
         font-weight: bold; }
 
+.produtos {
+  margin: 30px 0; }
+  .produtos .produtos-container {
+    margin: 30px 0; }
+    .produtos .produtos-container .produtos-itens {
+      color: #333; }
+      .produtos .produtos-container .produtos-itens h2 {
+        font-size: 19px;
+        margin: 10px 0 0; }
+      .produtos .produtos-container .produtos-itens .produtos-stars {
+        font-size: 10px; }
+        .produtos .produtos-container .produtos-itens .produtos-stars svg {
+          fill: #FF9900; }
+      .produtos .produtos-container .produtos-itens .produtos-preco {
+        font-size: 16px; }
+
+footer {
+  background: #333333;
+  padding: 25px 0;
+  color: #fff; }
+  footer a {
+    color: #fff; }
+    footer a:hover {
+      color: #333; }
+  footer h4 {
+    color: #FF9900;
+    font-size: 19px; }
+  footer ul li.ellipsis {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; }
+
+@media (max-width: 375px) {
+  .banners-promocionais-statico .banners-promocionais-statico-12x p,
+  .banners-promocionais-statico .banners-promocionais-statico-todo-br p {
+    font-size: 14px; } }
+@media (max-width: 767px) {
+  header form {
+    margin: 20px 10px; }
+
+  #banners-promocionais {
+    display: none; }
+
+  .produtos-container img {
+    width: 100%; } }
+@media (max-width: 991px) {
+  header ul li {
+    margin: 7px 0; } }
 /*!
  * Bootstrap v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -9340,10 +9389,28 @@ a.text-dark:hover {
     color: inherit;
     border-color: #dee2e6; } }
 /*# sourceMappingURL=bootstrap.min.css.map */
+.breadcrumb {
+  background: initial;
+  margin: 40px 0;
+  padding: 0; }
+  .breadcrumb a {
+    color: #ff0f9a; }
+
 body {
   color: #333333; }
 
 a {
   text-decoration: none !important; }
+
+h1 {
+  font-size: 26px; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: bold;
+  margin: 10px 0; }
 
 /*# sourceMappingURL=style.css.map */
