--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,8 @@
 @import"./banners-promocionais-statico.scss";
 @import"./produtos.scss";
 @import"./footer.scss";
+@import"./produtos-compras.scss";
+@import"./cart.scss";
 @import"./responsive.scss";
 
 //Framework
